[gd_scene load_steps=16 format=4 uid="uid://5lx8i8k1bwb6"]

[ext_resource type="Script" uid="uid://ffaygal6lgs0" path="res://Scripts/gameplay.gd" id="1_2up4p"]
[ext_resource type="PackedScene" uid="uid://6jg502bjlxcc" path="res://Nodes/Scenes/hud.tscn" id="2_igtqb"]
[ext_resource type="Texture2D" uid="uid://bqbehjk01ads1" path="res://Art/Sprites/Backgrounds/05_sky.png" id="3_0kq4j"]
[ext_resource type="Script" uid="uid://drqocjk5017wb" path="res://Scripts/cloudLayer.gd" id="4_caobg"]
[ext_resource type="Texture2D" uid="uid://wsrfjacr3r2b" path="res://Art/Sprites/Backgrounds/04_cloud.png" id="5_imqp5"]
[ext_resource type="Texture2D" uid="uid://dcpl1qhfvsx0f" path="res://Art/Sprites/Backgrounds/03_hill_fade.png" id="6_okm22"]
[ext_resource type="Texture2D" uid="uid://dvpvcslxhgh20" path="res://Art/Sprites/Backgrounds/02_hill.png" id="7_rsha6"]
[ext_resource type="Texture2D" uid="uid://bo3v2nh02hnwh" path="res://Art/Sprites/Backgrounds/01_grass.png" id="8_vr84i"]
[ext_resource type="TileSet" uid="uid://bt3vewhvgitgu" path="res://Tilemaps/tilemap_keyboard.tres" id="9_kfmp7"]
[ext_resource type="TileSet" uid="uid://ohv35se0q4xm" path="res://Tilemaps/tilemap_world.tres" id="10_kfmp7"]
[ext_resource type="PackedScene" uid="uid://c0i2qcdea4yl" path="res://Nodes/playerUFO.tscn" id="10_rmiow"]
[ext_resource type="PackedScene" uid="uid://dl8e2shl6fofv" path="res://Nodes/player.tscn" id="11_xg73q"]
[ext_resource type="PackedScene" uid="uid://crge5gwsssnoo" path="res://Nodes/gameCamera.tscn" id="12_ljhex"]
[ext_resource type="Script" uid="uid://bpgusj6w8b8ww" path="res://Scripts/enemy_group.gd" id="13_5gurx"]
[ext_resource type="LabelSettings" uid="uid://b4ygd0rhiokqe" path="res://Fonts/labelSettings.tres" id="15_kfmp7"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2up4p")
stageName = "Tutorial"

[node name="HUD" parent="." instance=ExtResource("2_igtqb")]

[node name="Background" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_mirroring = Vector2(2560, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Sky"]
texture = ExtResource("3_0kq4j")
centered = false

[node name="Cloud" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_mirroring = Vector2(2560, 0)
script = ExtResource("4_caobg")

[node name="Sprite2D" type="Sprite2D" parent="Background/Cloud"]
texture = ExtResource("5_imqp5")
centered = false

[node name="HillFade" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(2560, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/HillFade"]
texture = ExtResource("6_okm22")
centered = false

[node name="Hill" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(2560, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Hill"]
texture = ExtResource("7_rsha6")
centered = false

[node name="Grass" type="ParallaxLayer" parent="Background"]
position = Vector2(0, -750)
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(2560, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Grass"]
texture = ExtResource("8_vr84i")
centered = false

[node name="GrennContinuos" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(2560, 0)

[node name="ColorRect" type="ColorRect" parent="Background/GrennContinuos"]
offset_top = 1792.0
offset_right = 2560.0
offset_bottom = 2047.0
color = Color(0.180392, 0.8, 0.443137, 1)

[node name="Label" type="Label" parent="."]
offset_left = 2534.0
offset_top = 1032.0
offset_right = 3078.0
offset_bottom = 1119.0
text = "‚Üê Get to the ship"
label_settings = ExtResource("15_kfmp7")

[node name="Keyboard" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAgAA0ABwAAAAAAAAAeAA0ACgAAAAAAAAAfAAwAAQASAAIAAAAfAA0AAQATAAMAAAA=")
tile_set = ExtResource("9_kfmp7")

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAZABIAAgAFAAMAAAAaABIAAgAGAAMAAAAbABIAAgAGAAMAAAAcABIAAgAGAAMAAAAdABIAAgAGAAMAAAAeABIAAgAGAAMAAAAfABIAAgAGAAMAAAAgABIAAgAGAAMAAAAhABIAAgAGAAMAAAAiABIAAgAGAAMAAAAjABIAAgAGAAMAAAAkABIAAgAGAAMAAAAlABIAAgAGAAMAAAAmABIAAgAGAAMAAAAnABIAAgAGAAMAAAAoABIAAgAHAAMAAAB8AEMAAAASAAIAAAA=")
tile_set = ExtResource("10_kfmp7")

[node name="PlayerUFO" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("10_rmiow")]
position = Vector2(2444, 1090)
collision_mask = 2
camera = NodePath("../GameCamera")

[node name="Player" parent="." instance=ExtResource("11_xg73q")]
position = Vector2(1773, 1087)

[node name="GameCamera" parent="." node_paths=PackedStringArray("playerRef", "playerUFORef") instance=ExtResource("12_ljhex")]
position = Vector2(2100, 1663)
limit_left = 0
limit_top = -512
limit_right = 6300
limit_bottom = 1760
playerRef = NodePath("../Player")
playerUFORef = NodePath("../PlayerUFO")

[node name="EnemyGroup" type="Node2D" parent="." node_paths=PackedStringArray("playerRef")]
script = ExtResource("13_5gurx")
playerRef = NodePath("../PlayerUFO")

[connection signal="wonGame" from="." to="PlayerUFO" method="_on_main_won_game"]
[connection signal="wonGame" from="." to="GameCamera" method="_on_main_won_game"]
[connection signal="enemyCaptured" from="PlayerUFO" to="." method="_on_player_ufo_enemy_captured"]
[connection signal="enteredUFO" from="Player" to="." method="_on_player_entered_ufo"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="playerDead" from="Player" to="." method="_on_player_player_dead"]
[connection signal="enemyhit" from="EnemyGroup" to="Player" method="_on_enemy_enemyhit"]
